--- a/Client/Dt.Base/Report/Preview/RptSearchForm.xaml
+++ b/Client/Dt.Base/Report/Preview/RptSearchForm.xaml
@@ -1,8 +1,16 @@
-﻿<UserControl
+﻿<a:Mv
     x:Class="Dt.Base.Report.RptSearchForm"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    Title="查询">
 
+    <a:Mv.Menu>
+        <a:Menu>
+            <a:Mi ID="查询" Icon="搜索" ShowInPhone="Icon" Click="OnQuery" />
+            <a:Mi ID="重置" Icon="撤消" Click="OnResetParams" />
+        </a:Menu>
+    </a:Mv.Menu>
+    
     <a:Fv x:Name="_fv" />
-</UserControl>
+</a:Mv>
