--- a/Client/Dt.Base/Report/Preview/DefaultRptSearch.xaml
+++ b/Client/Dt.Base/Report/Preview/DefaultRptSearch.xaml
@@ -1,16 +1,15 @@
-﻿<a:Mv
-    x:Class="Dt.Base.Report.RptSearchForm"
+﻿<a:RptSearchMv
+    x:Class="Dt.Base.Report.DefaultRptSearch"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base"
-    Title="查询">
+    xmlns:a="using:Dt.Base">
 
     <a:Mv.Menu>
         <a:Menu>
             <a:Mi ID="查询" Icon="搜索" ShowInPhone="Icon" Click="OnQuery" />
-            <a:Mi ID="重置" Icon="撤消" Click="OnResetParams" />
+            <a:Mi ID="重置" Icon="撤消" Click="OnReset" />
         </a:Menu>
     </a:Mv.Menu>
     
     <a:Fv x:Name="_fv" />
-</a:Mv>
+</a:RptSearchMv>
