--- a/Client/Dt.Base/Report/Design/Edit/Forms/ChartForm.xaml
+++ b/Client/Dt.Base/Report/Design/Edit/Forms/ChartForm.xaml
@@ -13,7 +13,7 @@
             <a:ChartLegend x:Name="_legend" />
         </a:Chart>
         <a:Fv x:Name="_fv" Grid.Row="1">
-            <a:CList ID="type" Title="图表类型" Enum="Dt.Charts.ChartType,Dt.Charts" />
+            <a:CList ID="type" Title="图表类型" Ex="EnumData#Dt.Charts.ChartType,Dt.Charts" />
             <a:CList ID="tbl" Title="数据源" />
             <a:CList ID="fieldseries" Title="系列字段" />
             <a:CList ID="fieldx" Title="分类字段" />
@@ -23,7 +23,7 @@
             <a:CBar Title="图例" />
             <a:CBool ID="showlegend" Title="显示图例" />
             <a:CText ID="legtitle" Title="图例标题" />
-            <a:CList ID="legpos" Title="图例位置" Enum="Dt.Charts.LegendPosition,Dt.Charts" />
+            <a:CList ID="legpos" Title="图例位置" Ex="EnumData#Dt.Charts.LegendPosition,Dt.Charts" />
             <a:CList ID="legorientation" Title="布局方向">
                 <a:CList.Items>
                     <x:String>Vertical</x:String>
