--- a/Client/Dt.Sample/FormView/FvListDemo.xaml
+++ b/Client/Dt.Sample/FormView/FvListDemo.xaml
@@ -64,6 +64,39 @@
                     </a:CList>
                     <a:CList ID="listrow" Title="模拟IDString" SrcID="id" TgtID="listrowid" LoadData="OnLoadDataTable" AfterSelect="OnSelectedRow" />
 
+                    <a:CBar Title="筛选排序" />
+                    <a:CList ID="filter" Title="筛选" LoadData="OnLoadPersons">
+                        <a:CList.FilterCfg>
+                            <a:FilterCfg EnablePinYin="True" IsRealtime="True" Placeholder="拼音简码或包含的文字" />
+                        </a:CList.FilterCfg>
+                    </a:CList>
+                    <a:CList ID="order" Title="排序" LoadData="OnLoadPersons">
+                        <a:CList.Toolbar>
+                            <a:Menu>
+                                <a:Mi ID="姓名" CmdParam="xm" />
+                                <a:Mi ID="出生日期" CmdParam="chushengrq desc" />
+                            </a:Menu>
+                        </a:CList.Toolbar>
+                    </a:CList>
+                    <a:CList ID="order" Title="自定义工具栏" LoadData="OnLoadPersons">
+                        <a:CList.Toolbar>
+                            <a:Menu>
+                                <a:Mi ID="编辑" Click="OnEdit" />
+                            </a:Menu>
+                        </a:CList.Toolbar>
+                    </a:CList>
+                    <a:CList ID="filterorder" Title="筛选排序多选" SelectionMode="Multiple" LoadData="OnLoadPersons">
+                        <a:CList.FilterCfg>
+                            <a:FilterCfg EnablePinYin="True" IsRealtime="True" Placeholder="拼音简码或包含的文字" />
+                        </a:CList.FilterCfg>
+                        <a:CList.Toolbar>
+                            <a:Menu>
+                                <a:Mi ID="姓名" CmdParam="xm" />
+                                <a:Mi ID="编辑" />
+                            </a:Menu>
+                        </a:CList.Toolbar>
+                    </a:CList>
+                    
                     <a:CBar Title="需先登录" />
                     <a:CList ID="code" Title="民族" Ex="Option#民族" />
                     <a:CList ID="degree" Title="学历" Ex="Option#学历" />
