Entity增加OnInit方法用来统一添加当前实体的所有回调方法，主要包括三类回调：保存前、删除前、Cell.Val值变化前

--- a/Client/Dt.Sample/DataAccess/EntityDemo.xaml
+++ b/Client/Dt.Sample/DataAccess/EntityDemo.xaml
@@ -13,5 +13,6 @@
         <a:CBool ID="IsCheck" Title="联动源不为空" />
         <Button Content="修改有Hook无绑定的Cell" Click="OnNoBinding" />
         <Button Content="修改无Hook的Cell" Click="OnNoHook" />
+        <Button Content="切换数据源" Click="OnToggleData" />
     </a:Fv>
 </a:Win>
