--- a/Client/Dt.MgrDemo/单实体/基础/实体Win.xaml
+++ b/Client/Dt.MgrDemo/单实体/基础/实体Win.xaml
@@ -1,9 +1,9 @@
 ﻿<a:Win
-    x:Class="$rootnamespace$.$clsroot$Win"
+    x:Class="Dt.MgrDemo.单实体.实体Win"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    xmlns:l="using:$rootnamespace$">
+    xmlns:l="using:Dt.MgrDemo.单实体">
 
     <a:Pane>
         <a:Tabs>
@@ -13,21 +13,21 @@
                 </a:SearchMv>
             </a:Tab>
             <a:Tab Icon="漏斗">
-                <l:$clsroot$Query x:Name="_query" Query="OnQuery" />
+                <l:实体Query x:Name="_query" Query="OnQuery" />
             </a:Tab>
         </a:Tabs>
     </a:Pane>
     <a:Main>
         <a:Tabs>
             <a:Tab Order="1">
-                <l:$clsroot$List x:Name="_list" />
+                <l:实体List x:Name="_list" />
             </a:Tab>
         </a:Tabs>
     </a:Main>
     <a:Pane Pos="Right">
         <a:Tabs>
             <a:Tab>
-                <l:$clsroot$Form x:Name="_form" />
+                <l:实体Form x:Name="_form" />
             </a:Tab>
         </a:Tabs>
     </a:Pane>
