--- a/Client/Dt.UIDemo/FormView/QueryFvDemo.xaml
+++ b/Client/Dt.UIDemo/FormView/QueryFvDemo.xaml
@@ -17,8 +17,13 @@
                     <a:CText ID="值_min" Query="Editable" QueryFlag="Floor" ShowTitle="False" />
                     <a:CText ID="值_max" Query="Editable" QueryFlag="Ceil" ShowTitle="False" />
                     <a:CText ID="忽略" Query="Editable" />
-                    
-                    <Button Content="查询" Command="{Binding CmdQuery,ElementName=_fv}" HorizontalAlignment="Stretch" />
+                    <a:CBar />
+                    <a:CBar>
+                        <Grid ColumnDefinitions="*,*">
+                            <Button Content="重置" Command="{Binding CmdReset,ElementName=_fv}" HorizontalAlignment="Stretch" />
+                            <Button Content="查询" Command="{Binding CmdQuery,ElementName=_fv}" HorizontalAlignment="Stretch" Grid.Column="1" />
+                        </Grid>
+                    </a:CBar>
                 </a:QueryFv>
             </a:Tab>
         </a:Tabs>
