--- a/Client/Dt.MgrDemo/Crud/AccessDemo.xaml
+++ b/Client/Dt.MgrDemo/Crud/AccessDemo.xaml
@@ -28,6 +28,18 @@
             <Button Content="Name修改事件" Click="OnUpdateEvent" />
             <Button Content="删除实体事件" Click="OnDelEvent" />
         </StackPanel>
+
+        <a:CBar Title="虚拟实体" />
+        <StackPanel Orientation="Horizontal">
+            <Button Content="增加实体" Click="OnInsertVir" />
+            <Button Content="更新实体" Click="OnUpdateVir" />
+            <Button Content="删除实体" Click="OnDelVir" />
+            <Button Content="批量增删改" Click="OnSaveVir" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <Button Content="根据ID直接删除" Click="OnDirectDelVir" />
+            <Button Content="根据ID通过实体系统删除" Click="OnDelByIDVir" />
+        </StackPanel>
         
         <a:CFree RowSpan="5" ShowTitle="False">
             <TextBox x:Name="_tbInfo"
