--- a/Client/Dt.UIDemo/FormView/BaseCellDemo.xaml
+++ b/Client/Dt.UIDemo/FormView/BaseCellDemo.xaml
@@ -9,7 +9,7 @@
             <a:Tab Order="1" Title="格">
                 <a:Fv x:Name="_fv">
                     <a:CBar Title="基本格" />
-                    <a:CText ID="txt" Title="文本框" Placeholder="文本框" />
+                    <a:CText ID="txt" Title="文本框" AutoCookie="True" Placeholder="文本框" />
                     <a:CText ID="txtinput" Title="控制输入法" InputScope="Number" />
                     <a:CText ID="txtlong" Title="长文本" AcceptsReturn="True" RowSpan="2" UpdateTimely="False" />
                     <a:CText ID="txtpy" Title="拼音码" UpdateTimely="False" Changed="OnPyChanged" />
