--- a/Client/Dt.MgrDemo/单实体/基础/实体Form.xaml
+++ b/Client/Dt.MgrDemo/单实体/基础/实体Form.xaml
@@ -7,7 +7,7 @@
 
     <a:Mv.Menu>
         <a:Menu>
-            <a:Mi ID="保存" Icon="保存" ShowInPhone="Icon" Click="OnSave" />
+            <a:Mi ID="保存" Icon="保存" IsEnabled="{Binding IsDirty,ElementName=_fv}" ShowInPhone="Icon" Click="OnSave" />
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
             <a:Mi ID="删除" Icon="删除" Click="OnDel" />
         </a:Menu>
