--- a/Client/Dt.UIDemo/Win/TabNav1.xaml
+++ b/Client/Dt.UIDemo/Win/TabNav1.xaml
@@ -1,4 +1,4 @@
-﻿<a:Mv
+﻿<a:Tab
     x:Class="Dt.UIDemo.TabNav1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,15 +6,15 @@
     Title = "Tab内部导航"
     x:Name="_nav">
 
-    <a:Mv.Menu>
+    <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" />
             <a:Mi ID="保存" Icon="保存" ShowInPhone="Icon" />
         </a:Menu>
-    </a:Mv.Menu>
+    </a:Tab.Menu>
 
     <StackPanel Margin="10">
         <CheckBox Content="隐藏标题栏" IsChecked="{Binding HideTitleBar,Mode=TwoWay,ElementName=_nav}" />
         <Button Content="下一页" Click="OnNextPage" VerticalAlignment="Top" />
     </StackPanel>
-</a:Mv>
+</a:Tab>
