--- a/Client/Dt.UIDemo/Win/TabNavi.xaml
+++ b/Client/Dt.UIDemo/Win/TabNavi.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="Dt.UIDemo.WinNavi"
+    x:Class="Dt.UIDemo.TabNavi"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
