升级uno4.7.37，完善Tab相关的文档

--- a/Client/Dt.UIDemo/Report/RptDemo.xaml
+++ b/Client/Dt.UIDemo/Report/RptDemo.xaml
@@ -74,11 +74,5 @@
         </a:Tabs>
     </a:Pane>
 
-    <a:Main>
-        <a:Tabs>
-            <a:Tab Order="2">
-                <a:RptView x:Name="_rptView" Title="RptView" />
-            </a:Tab>
-        </a:Tabs>
-    </a:Main>
+    <a:RptView x:Name="_rptView" Title="RptView" Order="2" />
 </a:Win>
