--- a/Tools/DtTemplates/Dt/Tab/BlankTab.xaml
+++ b/Tools/DtTemplates/Dt/Tab/BlankTab.xaml
@@ -1,4 +1,4 @@
-﻿<a:Mv
+﻿<a:Tab
     x:Class="$rootnamespace$.$safeitemname$"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,14 +6,14 @@
     xmlns:l="using:$rootnamespace$"
     Title="$title$">
 
-    <a:Mv.Menu>
+    <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="保存" Icon="保存" />
             <a:Mi ID="搜索" Icon="搜索" />
         </a:Menu>
-    </a:Mv.Menu>
+    </a:Tab.Menu>
     
     <Grid Padding="10">
 
     </Grid>
-</a:Mv>
+</a:Tab>
