--- a/Tools/DtTemplates/Dt/Tab/ListTab.xaml
+++ b/Tools/DtTemplates/Dt/Tab/ListTab.xaml
@@ -1,4 +1,4 @@
-﻿<a:Mv
+﻿<a:Tab
     x:Class="$rootnamespace$.$safeitemname$"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,12 +6,12 @@
     xmlns:l="using:$rootnamespace$"
     Title="$title$">
 
-    <a:Mv.Menu>
+    <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnToSearch" />
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
         </a:Menu>
-    </a:Mv.Menu>
+    </a:Tab.Menu>
 
     <a:Lv x:Name="_lv" ItemClick="OnItemClick">
         <DataTemplate>
@@ -21,4 +21,4 @@
             </StackPanel>
         </DataTemplate>
     </a:Lv>
-</a:Mv>
+</a:Tab>
