--- a/Client/Dt.MgrDemo/单实体/虚拟/虚拟Form.xaml
+++ b/Client/Dt.MgrDemo/单实体/虚拟/虚拟Form.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Tab
-    x:Class="Dt.MgrDemo.单实体.实体Form"
+    x:Class="Dt.MgrDemo.单实体.虚拟Form"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
@@ -14,14 +14,14 @@
     </a:Tab.Menu>
 
     <a:Fv x:Name="_fv">
-        <a:CNum ID="序列" IsInteger="True" />
+        <a:CText ID="主表名称" />
         <a:CText ID="限长4" />
         <a:CText ID="不重复" />
+        <a:CText ID="扩展1名称" />
         <a:CBool ID="禁止选中" />
         <a:CBool ID="禁止保存" />
+        <a:CText ID="扩展2名称" />
         <a:CBool ID="禁止删除" />
         <a:CText ID="值变事件" />
-        <a:CDate ID="创建时间" />
-        <a:CDate ID="修改时间" />
     </a:Fv>
 </a:Tab>
