--- a/Client/Dt.MgrDemo/单实体/虚拟/虚拟Win.xaml
+++ b/Client/Dt.MgrDemo/单实体/虚拟/虚拟Win.xaml
@@ -1,16 +1,16 @@
 ﻿<a:Win
-    x:Class="$rootnamespace$.$clsroot$Win"
+    x:Class="Dt.MgrDemo.单实体.虚拟Win"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    xmlns:l="using:$rootnamespace$">
+    xmlns:l="using:Dt.MgrDemo.单实体">
 
     <a:Tabs a:Ex.Dock="Left">
         <a:FuzzySearch x:Name="_search" Search="OnSearch" Icon="搜索">
             <x:String>全部</x:String>
         </a:FuzzySearch>
-        <l:$clsroot$Query x:Name="_query" Query="OnQuery" Icon="漏斗" />
+        <l:虚拟Query x:Name="_query" Query="OnQuery" Icon="漏斗" />
     </a:Tabs>
-    <l:$clsroot$List x:Name="_list" Order="1" />
-    <l:$clsroot$Form x:Name="_form" a:Ex.Dock="Right" />
+    <l:虚拟List x:Name="_list" Order="1" />
+    <l:虚拟Form x:Name="_form" a:Ex.Dock="Right" />
 </a:Win>
