--- a/Tools/DtTemplates/Dt/Single/Res/EntityList.xaml
+++ b/Tools/DtTemplates/Dt/Single/Res/EntityList.xaml
@@ -1,11 +1,11 @@
-﻿<a:Mv
+﻿<a:Tab
     x:Class="$rootnamespace$.$clsroot$List"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
     Title="列表">
 
-    <a:Mv.Resources>
+    <a:Tab.Resources>
         <a:Cols x:Key="TableView">
 $lvcols$
         </a:Cols>
@@ -17,9 +17,9 @@ $lvtemp$
         <DataTemplate x:Key="TileView">
 $lvtemp$
         </DataTemplate>
-    </a:Mv.Resources>
+    </a:Tab.Resources>
 
-    <a:Mv.Menu>
+    <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnToSearch" />
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
@@ -29,7 +29,7 @@ $lvtemp$
                 <a:Mi ID="平铺" IsCheckable="True" Checked="OnTileSelected" GroupName="View" />
             </a:Mi>
         </a:Menu>
-    </a:Mv.Menu>
+    </a:Tab.Menu>
 
     <a:Lv x:Name="_lv" View="{StaticResource TableView}" ViewMode="Table" ItemClick="OnItemClick" />
-</a:Mv>
+</a:Tab>
