领域服务用静态方式替换单例模式，增加样例

--- a/Client/Dt.MgrDemo/Crud/AccessDemo.xaml
+++ b/Client/Dt.MgrDemo/Crud/AccessDemo.xaml
@@ -58,5 +58,10 @@
             <Button Content="根据ID查询" Click="OnCacheByID" />
             <Button Content="根据Key查询" Click="OnCacheByKey" />
         </StackPanel>
+
+        <a:CBar Title="领域服务" />
+        <StackPanel Orientation="Horizontal">
+            <Button Content="自由批量增删改" Click="OnSaveDs" />
+        </StackPanel>
     </a:Fv>
 </a:Win>
