--- a/Tools/DtTemplates/Dt/OnToMany/Res/ParentList.xaml
+++ b/Tools/DtTemplates/Dt/OnToMany/Res/ParentList.xaml
@@ -1,9 +1,9 @@
 ﻿<a:Tab
-    x:Class="$rootnamespace$.$childroot$List"
+    x:Class="$rootnamespace$.$parentroot$List"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="$childroot$列表">
+    Title="$parentroot$列表">
 
     <a:Tab.Resources>
         <a:Cols x:Key="TableView">
@@ -21,6 +21,7 @@ $lvtemp$
 
     <a:Tab.Menu>
         <a:Menu>
+            <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnToSearch" />
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
             <a:Mi ID="视图" Icon="汉堡">
                 <a:Mi ID="列表" IsCheckable="True" Checked="OnListSelected" GroupName="View" />
