--- a/Tools/DtTemplates/Dt/OnToMany/Res/ChildForm.xaml
+++ b/Tools/DtTemplates/Dt/OnToMany/Res/ChildForm.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Tab
-    x:Class="$rootnamespace$.$childroot$Form"
+    x:Class="$rootnamespace$.$parentroot$$childroot$Form"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
