--- a/Tools/DtTemplates/Dt/OnToMany/Res/ChildList.xaml
+++ b/Tools/DtTemplates/Dt/OnToMany/Res/ChildList.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Tab
-    x:Class="$rootnamespace$.$childroot$List"
+    x:Class="$rootnamespace$.$parentroot$$childroot$List"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
@@ -21,7 +21,7 @@ $lvtemp$
 
     <a:Tab.Menu>
         <a:Menu>
-            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
+            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" IsEnabled="false" Click="OnAdd" />
             <a:Mi ID="视图" Icon="汉堡">
                 <a:Mi ID="列表" IsCheckable="True" Checked="OnListSelected" GroupName="View" />
                 <a:Mi ID="表格" IsCheckable="True" Checked="OnTableSelected" IsChecked="True" GroupName="View" />
