--- a/Client/Dt.MgrDemo/一对多/父表大儿Form.xaml
+++ b/Client/Dt.MgrDemo/一对多/父表大儿Form.xaml
@@ -15,6 +15,6 @@
 
     <a:Fv x:Name="_fv">
         <a:CNum ID="ParentID" />
-        <a:CText ID="ItemName" />
+        <a:CText ID="大儿名" />
     </a:Fv>
 </a:Tab>
