--- a/Client/Dt.MgrDemo/一对多/父表小儿List.xaml
+++ b/Client/Dt.MgrDemo/一对多/父表小儿List.xaml
@@ -5,6 +5,27 @@
     xmlns:a="using:Dt.Base"
     Title="小儿列表">
 
+    <a:Tab.Resources>
+        <a:Cols x:Key="TableView">
+            <a:Col ID="GroupID" />
+            <a:Col ID="小儿名" />
+        </a:Cols>
+
+        <DataTemplate x:Key="ListView">
+            <StackPanel Padding="10">
+                <a:Dot ID="GroupID" />
+                <a:Dot ID="小儿名" />
+            </StackPanel>
+        </DataTemplate>
+
+        <DataTemplate x:Key="TileView">
+            <StackPanel Padding="10">
+                <a:Dot ID="GroupID" />
+                <a:Dot ID="小儿名" />
+            </StackPanel>
+        </DataTemplate>
+    </a:Tab.Resources>
+    
     <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" IsEnabled="false" Click="OnAdd" />
@@ -12,18 +33,19 @@
             <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
             <a:Mi ID="选择" Icon="全选" Click="OnMultiMode" />
             <a:Mi ID="取消" Icon="全选" Click="OnCancelMulti" Visibility="Collapsed" />
+            <a:Mi ID="视图" Icon="汉堡">
+                <a:Mi ID="列表" IsCheckable="True" Checked="OnListSelected" GroupName="View" />
+                <a:Mi ID="表格" IsCheckable="True" Checked="OnTableSelected" IsChecked="True" GroupName="View" />
+                <a:Mi ID="平铺" IsCheckable="True" Checked="OnTileSelected" GroupName="View" />
+            </a:Mi>
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Lv x:Name="_lv" ViewMode="Table" ItemClick="OnItemClick">
+    <a:Lv x:Name="_lv" View="{StaticResource TableView}" ViewMode="Table" ItemClick="OnItemClick">
         <a:Ex.Menu>
             <a:Menu>
                 <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
             </a:Menu>
         </a:Ex.Menu>
-        <a:Cols>
-            <a:Col ID="GroupID" />
-            <a:Col ID="ItemName" />
-        </a:Cols>
     </a:Lv>
 </a:Tab>
