--- a/Tools/DtTemplates/Dt/Single/Res/EntityList.xaml
+++ b/Tools/DtTemplates/Dt/Single/Res/EntityList.xaml
@@ -23,6 +23,10 @@ $lvtemp$
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnToSearch" />
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
+            <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" Visibility="Collapsed" IsEnabled="{Binding HasSelected,ElementName=_lv}" />
+            <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
+            <a:Mi ID="选择" Icon="全选" Click="OnMultiMode" />
+            <a:Mi ID="取消" Icon="全选" Click="OnCancelMulti" Visibility="Collapsed" />
             <a:Mi ID="视图" Icon="汉堡">
                 <a:Mi ID="列表" IsCheckable="True" Checked="OnListSelected" GroupName="View" />
                 <a:Mi ID="表格" IsCheckable="True" Checked="OnTableSelected" IsChecked="True" GroupName="View" />
@@ -31,5 +35,11 @@ $lvtemp$
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Lv x:Name="_lv" View="{StaticResource TableView}" ViewMode="Table" ItemClick="OnItemClick" />
+    <a:Lv x:Name="_lv" View="{StaticResource TableView}" ViewMode="Table" ItemClick="OnItemClick">
+        <a:Ex.Menu>
+            <a:Menu>
+                <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
+            </a:Menu>
+        </a:Ex.Menu>
+    </a:Lv>
 </a:Tab>
