--- a/Client/Dt.UIDemo/Win/TabNaviItem.xaml
+++ b/Client/Dt.UIDemo/Win/TabNaviItem.xaml
@@ -4,25 +4,26 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <a:Tab.Menu>
-        <a:Menu>
-            <a:Mi ID="保存" Icon="保存" IsEnabled="{Binding IsChecked,ElementName=_cbSave}" />
-        </a:Menu>
-    </a:Tab.Menu>
-    
     <StackPanel Padding="10" Spacing="10">
         <a:CBar Title="向前导航设置" />
         <CheckBox x:Name="_cbModal" Content="带遮罩的模式视图" />
         <CheckBox x:Name="_cbInput" Content="包含导航参数" />
         <CheckBox x:Name="_cbResult" Content="包含返回结果" />
         <CheckBox x:Name="_cbHideTitle" Content="隐藏标题栏，PhoneUI模式有效" />
-        <Button Content="向前导航" Click="OnForward" />
-        <a:CBar Title="其他" />
+        <StackPanel Orientation="Horizontal">
+            <Button Content="向前导航" Click="OnForward" />
+            <Button Content="原地切换到新Tab" Click="OnToggle" />
+        </StackPanel>
+        <a:CBar Title="返回" />
+        <StackPanel Orientation="Horizontal">
+            <Button Content="返回上一Tab" Click="OnBackward" />
+            <Button Content="返回首页Tab" Click="OnBackToHome" />
+        </StackPanel>
+        <a:CBar Title="对话框内嵌Tab" />
         <CheckBox x:Name="_cbDlgTitle" Content="隐藏对话框标题" />
-        <CheckBox x:Name="_cbSave" Content="保存菜单可用，都被绑定到主区的元素，诡异" />
-        <Button Content="在对话框加载" Click="OnShowDlg" />
-        <Button Content="返回上一Tab" Click="OnBackward" />
-        <Button Content="切换到新Tab" Click="OnToggle" />
-        <Button Content="返回首页Tab" Click="OnBackToHome" />
+        <StackPanel Orientation="Horizontal">
+            <Button Content="对话框内嵌单个Tab" Click="OnSingle" />
+            <Button Content="内嵌多个Tab" Click="OnMulti" />
+        </StackPanel>
     </StackPanel>
 </a:Tab>
